20210802 Idle 애니메이션추가

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -34,3 +34,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="FPS_MonGameMode")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="FPS_MonCharacter")
 
+[/Script/NavigationSystem.NavigationSystemV1]
+bGenerateNavigationOnlyAroundNavigationInvokers=True
+
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
