--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -36,6 +36,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bGenerateNavigationOnlyAroundNavigationInvokers=True
+DataGatheringMode=Lazy
+DirtyAreasUpdateFreq=1.000000
 
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
